--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "michigan-fish",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://bobmatyas.github.io/michigan-fish",
   "dependencies": {
     "axios": "^0.19.0",
+    "gh-pages": "^2.0.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
